force-app/main/default/objects/smagicinteract__Converse_App_Task__c/smagicinteract__Converse_App_Task__c.object-meta.xml
<CustomObject>
    <label>Converse App Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse App Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>