force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>converse_app_tasks</relationshipName>
    <type>Lookup</type>
</CustomField>