force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Automation_Key_Reference__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Automation_Key_Reference__c</fullName>
    <description>This field contains the automation key reference.</description>
    <label>Automation Key Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>