force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Contact__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>