force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Converse_App_Action__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related action.</description>
    <label>Converse App Action</label>
    <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>