force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Enable_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Enable_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field value when checked will not allow to send a message to duplicate mobile number.</description>
    <label>Enable Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>