force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Event_Id__c</fullName>
    <description>This field contains the ID of the related event.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>