force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Incoming_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related incoming SMS.</description>
    <label>Incoming SMS</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>