force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Lead__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related lead.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>