force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__SMS_History__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related SMS history.</description>
    <label>SMS History</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>