force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <description>This field contains the value of the transaction status. The value can be: Success or Fail.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
                <label>Success</label>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>