force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Task_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Task_Id__c</fullName>
    <description>This field contains the ID of the related task.</description>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>