force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related template.</description>
    <label>Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Converse App Tasks</relationshipLabel>
    <relationshipName>Converse_App_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>