force-app/main/default/objects/smagicinteract__Converse_App_Task__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <description>This field contains the value of the transaction type. The value can be: Bulk or Automation.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
                <default>true</default>
                <label>Automation</label>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>